--- a/examples/shellsort-av.html
+++ b/examples/shellsort-av.html
@@ -227,16 +227,21 @@ p.output.line {
   // Insertion sort using increments
   function inssort(start, incr) {
     var i, j;
-av.umsg("Sorting the subarray");
+    av.umsg("Sorting the subarray");
     for (i=start+incr; i<arr.size(); i+=incr) {
       setBlue(i);
-      av.step();
-      for (j=i; j>=incr && (arr.value(j) < arr.value(j-incr)); j-=incr) {
-        arr.swap(j, j-incr); // swap the two indices
-        av.step();
+      for (j=i; j>=incr; j-=incr) {
         setBlue(j-incr);
+	av.step();
+        if (arr.value(j) < arr.value(j-incr)) {
+          arr.swap(j, j-incr); // swap the two indices
+          av.step();
+	}
+        else {
+  	  arr.highlight([j-incr, j]);
+          break; // Done pushing element, leave for loop
+        }
 	arr.highlight(j);
-        av.step();
       }
       arr.highlight(j);
     }
@@ -275,6 +280,7 @@ av.umsg("Sorting the subarray");
           sweep(incrs[i]); // run the sweep to create the AV
         }
       }
+      av.umsg("Done sorting!");
       av.recorded(); // mark the end
     }
   }
