Fixed tests to correctly get styles

--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
 	<script src="../src/layout.js"></script>
 
 	<script src="utils/qunit.js"></script>
-	<script src="data/testrunner.js"></script>
+<!--	<script src="data/testrunner.js"></script>-->
 	<script src="utils/arrayutils.js"></script>
 
 	<script src="unit/core.js"></script>
