Configurable options panel and speed slider (see #30 and #14)

--- a/examples/shellsort-av.html
+++ b/examples/shellsort-av.html
@@ -69,6 +69,7 @@ p.output.line {
     </p>
   </form>
   <div id="avcontainer">
+    <a class="jsavsettings" href="#">Settings</a>
     <table id=tableT style="margin-top:-15px; margin-bottom:-15px">
     <tr>
       <td width=100><span class="counter"></span></td>
