--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -30,6 +30,7 @@
       </td>
       <td>
     	<input type="button" name="about" value="About"/>
+      <a class="jsavsettings" href="#">Settings</a>
       </td>
     </tr>
   </table>
