Added a startup slide with initial output (see #3)

--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -34,7 +34,7 @@
       </td>
     </tr>
   </table>
-  <p class="output line"></p>
+  <p class="output line"><b style='display:block;margin-top:35px;font-size:300%;text-align:center;'>Shellsort Algorithm Presentation</b></p>
 </div>
 
 <script src="http://code.jquery.com/jquery-1.6.1.js"></script>
@@ -66,8 +66,6 @@
     alert(mystring);
   }
 
-  // message to be shown initially
-  av.umsg("<p style='text-align:center'><b style='font-size:300%'>Shellsort Algorithm Presentation</b></p>");
   av.umsg("Shellsort provides a huge improvement over O(n<sup>2</sup>) sorts sorts like Insertion Sort. It works by taking advantage of the fact that Insertion Sort works very well (in linear time) when the list is nearly sorted. Shellsort works by performing a series of Insertion Sorts on carefully selected sublists, first on small sublists and then on increasingly large sublists.");
 
   // create a new step to the visualization, a given message
