Improved the input parsing by replacing split with a regexp.

--- a/examples/shellsort-av.html
+++ b/examples/shellsort-av.html
@@ -139,8 +139,6 @@ p.output.line {
   }
 
   // Validate the increment series
-  // TODO: It is annoying that extra spaces come up as null numbers,
-  // causing validation to fail
   function checkIncrements() {
     var i, 
       num, 
@@ -148,7 +146,7 @@ p.output.line {
       msg = "Increments sequence must be decreasing positive values ending with 1";
     // Convert user's increments to an array,
     // assuming values are space separated
-    var incrs = $('input[name="increments"]', context).val().split(' ');
+    var incrs = $('input[name="increments"]', context).val().match(/[0-9]+/g);
     for (i=0; i<incrs.length; i++) {
       incrs[i] = Number(incrs[i]);
       if (isNaN(incrs[i]) || incrs[i] < 0 || incrs[i] > prev) { 
@@ -165,15 +163,13 @@ p.output.line {
   }
 
   // Validate the user-defined array values
-  // TODO: It is annoying that extra spaces come up as null numbers,
-  // causing validation to fail
   function processArrayValues() {
     var i, 
         num, 
         msg = "Must be 5 to 16 positive integers";
     // Convert user's values to an array,
     // assuming values are space separated
-    theArray = $('input[name="arrayValues"]', context).val().split(' ');
+    theArray = $('input[name="arrayValues"]', context).val().match(/[0-9]+/g);
     if (theArray.length === 1 && theArray[0] === '') { // Empty field
       theArray.length = 0;
       return true;
