--- a/examples/ShellsortPerformance.html
+++ b/examples/ShellsortPerformance.html
@@ -198,7 +198,7 @@ p.output.scroll {
       prev = Number.MAX_VALUE, 
       msg = "Increments sequence must be decreasing positive values ending with 1";
     // Convert user's increments to an array,
-    var incrs = $('input[name="increments"]', context).val().match(/[0-9]+/g);
+    var incrs = $('input[name="increments"]', context).val().match(/[0-9]+/g) || [];
     for (i=0; i<incrs.length; i++) {
       incrs[i] = Number(incrs[i]);
       if (isNaN(incrs[i]) || incrs[i] < 0 || incrs[i] > prev) { 
