Support for title as a splash screen (see #1)

--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -34,7 +34,7 @@
       </td>
     </tr>
   </table>
-  <p class="output line"><b style='display:block;margin-top:35px;font-size:300%;text-align:center;'>Shellsort Algorithm Presentation</b></p>
+  <p class="output line"></p>
 </div>
 
 <script src="http://code.jquery.com/jquery-1.6.1.js"></script>
@@ -54,7 +54,7 @@
     arr.css(index, {"background-color": "#ddf" });
   };
 
-  var av = new JSAV("container"); //containing HTML element with id container
+  var av = new JSAV("container", {"title": "Shellsort Algorithm Presentation"}); //containing HTML element with id container
   av.SPEED = 200; // Set the animation speed base
 
   // Connect action callbacks to the HTML entities
