Prefixed CSS classes and event with jsav (fixes #31)

--- a/examples/ShellsortPerformance.html
+++ b/examples/ShellsortPerformance.html
@@ -34,7 +34,7 @@ div h1 {
   background-color: #efe;
 }
 
-p.output.scroll {
+p.jsavoutput.jsavscroll {
   height: 150px;
 }
 
@@ -62,7 +62,7 @@ p.output.scroll {
         <label for="arraysize">&nbsp;List size:&nbsp;</label>
         <input size="5" name="arraysize" type="number" value="64"/>
       </p>
-      <p class="output scroll" readonly="readonly"
+      <p class="jsavoutput jsavscroll" readonly="readonly"
          style=""></p>
     </form>
   </div> <!--left-->
