--- a/examples/ShellsortProficiency.html
+++ b/examples/ShellsortProficiency.html
@@ -15,7 +15,7 @@
   overflow: hidden;
 }
 
-#container .array {
+#container .jsavarray {
    left: -10px;
 }
 
@@ -26,7 +26,7 @@ div h1 {
   background-color: #efe;
 }
 
-  p.output.line {
+  p.jsavoutput.jsavline {
     height: 40px;
     border: 1px;
   }
@@ -76,9 +76,9 @@ div h1 {
     <input type="button" name="sorting" value="Done Sorting Sublist" />
     <input type="button" name="incrementing" value="Done Increment" />
 
-    <p class="output line"></p>
+    <p class="jsavoutput jsavline"></p>
   </form>
-</div id="container">
+</div> <!-- container -->
 
 <script
    src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js">
