--- a/examples/shellsort-av.html
+++ b/examples/shellsort-av.html
@@ -22,10 +22,10 @@ div h1 {
   background-color: #efe;
   border: none;
 }
-.array {
+.jsavarray {
   padding-left:0;
 }
-p.output.line {
+p.jsavoutput.jsavline {
   height: 30px;
 }
 a.jsavsettings {
@@ -76,13 +76,13 @@ margin-left: 10px;
   <div id="avcontainer">
     <table id=tableT style="margin-top:-15px; margin-bottom:-15px">
     <tr>
-      <td width=100><span class="counter"></span></td>
+      <td width=100><span class="jsavcounter"></span></td>
       <td width=520px>
-        <div class="controls"></div>
+        <div class="jsavcontrols"></div>
       </td>
     </tr>
     </table>
-    <p class="output line" readonly="readonly"></p>
+    <p class="jsavoutput jsavline" readonly="readonly"></p>
   </div> <!--avcontainer-->
 </div> <!--container-->
 
