--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -13,10 +13,10 @@
     height: 400px;
     background-color: #efe;
   }
-  #container .array {
+  #container .jsavarray {
      left: -10px;
   }
-  p.output.line {
+  p.jsavoutput.jsavline {
     height: 80px;
     margin: 10px, 0px;
   }
@@ -24,9 +24,9 @@
 <div id="container">
   <table id=tableT style="margin-top:-15px; margin-bottom:-15px">
     <tr>
-      <td width=100><span class="counter"></span></td>
+      <td width=100><span class="jsavcounter"></span></td>
       <td width=650px>
-    	<div class="controls"></div>
+    	<div class="jsavcontrols"></div>
       </td>
       <td>
     	<input type="button" name="about" value="About"/>
@@ -34,7 +34,7 @@
       </td>
     </tr>
   </table>
-  <p class="output line"></p>
+  <p class="jsavoutput jsavline"></p>
 </div>
 
 <script src="http://code.jquery.com/jquery-1.6.1.js"></script>
