--- a/test/index.html
+++ b/test/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body id="body">
-	<h1 id="qunit-header"><a href="/jquery/test/index.html">JSAV Test Suite</a></h1>
+	<h1 id="qunit-header"><a href="index.html">JSAV Test Suite</a></h1>
 	<h2 id="qunit-banner"></h2>
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
@@ -38,9 +38,9 @@
 
 	<div id="qunit-fixture">
 	  <div id="arraycontainer">
-      <div class="controls"></div>
-      <div class="counter"></div>
-      <p class="output line"></p>
+      <div class="jsavcontrols"></div>
+      <div class="jsavcounter"></div>
+      <p class="jsavoutput jsavline"></p>
       <ol id="array">
         <li>12</li>
         <li>22</li>
