--- a/examples/shellsort-av.html
+++ b/examples/shellsort-av.html
@@ -111,18 +111,18 @@ margin-left: 10px;
     $('#arrayValues').val(params["array"]).prop("disabled", true);
   }
   
-  var arrayLayout = "_default"; // user preference of array layout
+  var arrayLayout = "bar"; // user preference of array layout
   // a function to use on settings panel for selecting array layout
   var layoutSetting = function() {
     // create an element for selecting the layout
     var $elem = $("<p><label for='arraylayout'>Array layout: </label><select name='arraylayout'>" +
-      "<option value='bar'>Bar</option><option value='_default'>Vertical</option></select></p>");
+      "<option value='bar'>Bar</option><option value='array'>Array</option></select></p>");
     // initialize the selection and register a change event listener
     $elem.find("select").val(arrayLayout).change(function() {
       // set the user preference
       arrayLayout = $(this).val();
       // show a not that the AV need to be regenerated
-      $elem.append("<span class='help'>Rerun for the change to take effect.</span>");
+      $elem.append("<span class='jsavhelp'>Rerun for the change to take effect.</span>");
     });
     return $elem;
   };
